--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "lucide-react": "^0.503.0",
+    "mongoose": "^8.14.1",
     "mssql": "^11.0.1",
     "next": "15.3.1",
     "react": "^19.0.0",
