--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "framer-motion": "^12.9.7",
     "lucide-react": "^0.503.0",
     "mongoose": "^8.14.1",
+    "motion": "^12.9.7",
     "mssql": "^11.0.1",
     "next": "15.3.1",
     "react": "^19.0.0",
